fixed broken css padding for logged out user
there was no padding between Register and Login

--- a/client/scss/ept/views/layout/_header.scss
+++ b/client/scss/ept/views/layout/_header.scss
@@ -159,6 +159,7 @@ header {
           line-height: $header-height;
           cursor: pointer;
         }
+        &.signed-out li { padding-left: 1.25rem; }
         &.signed-out li a {
           display: table-cell;
           height: inherit;
